# edgartools

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yaml  404.html  AGENTS.md  AI_USAGE_PATTERNS_DOCUMENTATION.md  CHANGELOG-README-MODERNIZATION.md  CHANGELOG-archive.md  CHANGELOG.md  CHUNKING_EXAMPLE.md  CLAUDE.md  COMPANY_API.md  CONTRIBUTING.md  Dockerfile  EDGARTOOLS_TABLE_EXTRACTION_GUIDE.md  EXTRACTION_GUIDE.md  FEAT-411-pytest-marks.md  FILING_API.md  FIXES_SUMMARY.md  FORK-WORKFLOW.md  FormType-Quick-Reference.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  METADATA_QUICK_REF.md  METADATA_USAGE_ANALYSIS.md  MSFT_AMD_VALIDATION.md  PATTERN_DOCUMENTATION.md  PeriodType-Quick-Reference.md  README-DRAFT.md  README-entity-transition.md  README.md  RELEASE_NOTES_5.3.0.md  RELEASE_NOTES_5.7.2.md  RELEASE_NOTES_5.8.0.md  RELEASE_NOTES_5.8.3.md  TTM_FEATURE_SUMMARY.md  (+83 more)
.beads/: issues.jsonl
.claude/: README.md  roles.md  settings.local.json
.github/: FUNDING.yaml  SPONSORS-PROFILE-SHORT.md  SPONSORS-PROFILE.md
.notes/: response_to_wessel.md
13f-filings/: index.html
AI_NATIVE_WORKFLOW_IMPLEMENTATION_PLAN/: index.html
FormType-Quick-Reference/: index.html
PeriodType-Quick-Reference/: index.html
SEC-Forms/: index.html
StatementType-Quick-Reference/: index.html
advanced-search/: index.html
ai-integration/: index.html
ai_docs/: attachments_api.md  company_api.md  data_objects.md  edgartools.md  entity_migration_guide.md  filing_statements.py  filings_api.md  financial_statements_api.md  funds-api.md  ownership_api.md  ratios_api.md  thirteenf_api.md  user_journey_1_example.md  user_journeys.md  xbrl_api.md
architecture-diagram/: index.html
attachments/: index.html
cloud-storage-testing-plan/: index.html
company/: index.html
company-financials/: index.html
company-group-testing/: index.html
company-subsets/: index.html
concept-level-standardization-plan/: index.html
configuration/: index.html
contributing/: index.html
data/: 13F-HR.privateportfolio.infotable.html  13F.0001894188-23-000007.txt  1800Flowers.8-K.html  1990sheader.txt  2020QTR1_unique_forms.txt  AAPL-Xbrl.2013.xml  Apple.10-K.md  BankOfAmerica.424B5.header.txt  D.1685REIT.xml  D.APFund.xml  D.Shepards.xml  Delaware.485BPOS.html  EVSolar.FormC-AR.xml  HiddenSea.FormCU.xml  Midcap.40App.header.txt  MultipleFilersHeader.txt  MultipleFormerCompaniesHeader.txt  NPORT.AdvancedSeries.xml  NPORT.Dupree.xml  Netflix.10K.xbrl.xml  Neurotez.FormCTR.xml  NextPoint.8K.html  Nvidia.10-K.html  OracleTable.html  PacificGas.424B5.html  WatersCorp.8-K.xbrl.xml  afcgamma.8K.html  alto.FormC.xml  apple_gaap.csv  badform.idx.txt  cabot.DEF14A.ixbrl.html  carbo_ceramics_gaap.csv  cereal.csv  company_facts.json  company_submission.json  company_tickers.json  crr.xbrl.xml  derivative_holding.xml  effect.xml  effect2.xml  (+29 more)
data-objects/: index.html
docs/: 13f-filings.md  AI_NATIVE_WORKFLOW_IMPLEMENTATION_PLAN.md  FormType-Quick-Reference.md  MIGRATION_SUMMARY.md  OLD_PARSER_AUDIT.md  PHASE2_RESULTS.md  PHASE3_RESULTS.md  PHASE4_FINDINGS.md  PeriodType-Quick-Reference.md  StatementType-Quick-Reference.md  Usage.ipynb  about.md  advanced-search.md  ai-integration.md  architecture-diagram.md  attachments.md  auto-eval-results.md  auto-eval-strategy.md  beads-workflow.md  cloud-storage-testing-plan.md  common-pitfalls.md  company-dataset-subsets-guide.md  company-financials.md  company-subsets.md  company.md  complete-guide.md  concept-level-standardization-plan.md  configuration.md  contributing.md  data-contract.md  data-objects.md  discussion-423-response.md  edgartools-financial-database-report.md  eightk-filings.md  examples.md  filtering-filings.md  financial-database-status.md  getting-started.md  getting-xbrl.md  index.md  (+45 more)
edgar/: GEMINI.md  README_TTM.md  __about__.py  __init__.py  _companies.py  _filings.py  _gaap.py  _html.py  _markdown.py  _party.py  _rich.py  _xbrl.py  _xml.py  attachments.py  company.py  company_reports.py  config.py  context.py  core.py  correspondence.py  current_filings.py  datatools.py  dates.py  documents.py  earnings.py  effect.py  entities.py  enums.py  filesystem.py  filing.py  filing_metadata.py  filingheader.py  filtering.py  financial_database.py  financials.py  form.py  form144.py  formatting.py  forms.py  formtypes.py  (+38 more)
edgar_warehouse/: __init__.py  __main__.py  cli.py  loaders.py  runtime.py  silver.py
eightk-filings/: index.html
examples/: README.md  README_table_width.md  company_details.py  feat004_demo_enhanced_validation.py  feat005_demo_statement_types.py  formtype_demo_examples.py  fund_entities_example.py  fund_examples.py  index.html  offering_lifecycle.py  offering_lifecycle_ai_discovery.py  periodtype_demo_examples.py  plot_revenue.py  ranking_search_examples.py  table_width_example.py  ttm_example.py
filtering-filings/: index.html
getting-started/: index.html
getting-xbrl/: index.html
gists/: QueryingXBRL.py
initial-steps/: index.html
insider-filings/: index.html
installation/: index.html
local-data/: index.html
navigating-filings/: index.html
notebooks/: 00_first_steps.ipynb  01_getting_started.ipynb  02_troubleshooting_ssl.ipynb  10k-business-description-python.ipynb  10q-quarterly-earnings-python.ipynb  13f-institutional-holdings-python.ipynb  8k-earnings-release-python.ipynb  Beginners-Guide.ipynb  Beginners-filings-attachments.ipynb  Companies.ipynb  Diagnosing-SSL-Issues.ipynb  Extract-Earnings-Releases.ipynb  Filtering-by-industry.ipynb  FinancialStatements.ipynb  Fund-Derivatives.ipynb  Fund-Filings.ipynb  Getting-Data-From-XBRL.ipynb  Initial-Insider-Transactions.ipynb  NOTEBOOK_REVIEW_SUMMARY.md  Paging-Through-Filings.ipynb  README.md  Reading-Data-From-XBRL.ipynb  Reporting-Period.ipynb  Ticker-Search-with-edgartools.ipynb  Viewing-Financial-Statements.ipynb  XBRL2-Cashflow-Statements.ipynb  XBRL2-CustomTags.ipynb  XBRL2-FactQueries.ipynb  XBRL2-FinancialRatios.ipynb  XBRL2-FraudAnalysis.ipynb  XBRL2-Instance-Only-XBRL.ipynb  XBRLConcepts.ipynb  (+35 more)
(+3902 files in other folders)
